updated js file for hover/toggle event on people cards page

--- a/ourpeople.html
+++ b/ourpeople.html
@@ -203,63 +203,65 @@
 
             <div class="container-fluid mt-neg-8 pb-8 cards">
                 <div class="d-flex flex-wrap justify-content-center">
-                        <div class="card mt-6 shadow filter lead-filt w-25">
+                        <div class="card mt-6 shadow filter sales-filt w-25">
                                 <div class="">
-                                        <div class="card-overlay">
+                                       <!-- <div class="card-overlay">
                                                 <h1 class="card-overlay-heading">Meet Alec!</h1>
                                                 <button class="js-video-button btn-people--launch" data-video-id='333396749' data-channel="vimeo">PLAY</button>
-                                        </div>
-                                    <img src="images/alec-people.png" class="card-img" alt="">
+                                        </div>-->
+                                    <img src="images/alecPeople.png" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <h6 class="card-title mb-0 text-uppercase">Mark Donatelli</h6>
-                                    <p class="card-text mb-3 people-p text-green fw-bold">Web Developer</p>
+                                    <h6 class="card-title mb-0 text-uppercase">Alec Kheboian</h6>
+                                    <p class="card-text mb-3 people-p text-green fw-bold">Sales</p>
+                                    <button class="js-video-button btn-people--launch" data-video-id='333396749' data-channel="vimeo"><i class="fas fa-play"></i></button>
+
                                 </div>
                             </div>
                             <div class="card mt-6 shadow filter sales-filt w-25">
                                     <div class="">
-                                            <div class="card-overlay">
+                                          <!--  <div class="card-overlay">
                                                     <h1 class="card-overlay-heading">Meet Amanda!</h1>
                                                     <button class="js-video-button btn-people--launch" data-video-id='331425015' data-channel="vimeo">PLAY</button>
 
-                                            </div>
-                                        <img src="images/amanda-people.png" class="card-img" alt="">
+                                            </div>-->
+                                        <img src="images/amandaPeople.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
-                                        <h6 class="card-title mb-0 text-uppercase">Mark Donatelli</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Web Developer</p>
+                                        <h6 class="card-title mb-0 text-uppercase">Amanda Leonardi</h6>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Human Resources</p>
                                     </div>
                                 </div>
                                 <div class="card mt-6 shadow filter lead-filt w-25">
                                         <div class="">
                                                 <div class="card-overlay">
-                                                        <h1 class="card-overlay-heading">Meet Brian!</h1>
+                                                        <h1 class="card-overlay-heading">Meet Jenn!</h1>
                                                         <script src="https://fast.wistia.com/embed/medias/6flvn0qqvn.jsonp" async></script>
                                                         <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
                                                         <span class="wistia_embed wistia_async_6flvn0qqvn popover=true popoverContent=link" style="display:inline;position:relative">
                                                         <a href="#"><i class="fas fa-play"></i></a></span>
                                                 </div>
-                                            <img src="images/alec-people.png" class="card-img" alt="">
+                                            <img src="images/jenPeople.png" class="card-img" alt="">
                                         </div>
                                         <div class="card-body">
-                                            <h6 class="card-title mb-0 text-uppercase">Mark Donatelli</h6>
-                                            <p class="card-text mb-3 people-p text-green fw-bold">Web Developer</p>
+                                            <h6 class="card-title mb-0 text-uppercase">Jennifer Sateriale</h6>
+                                            <p class="card-text mb-3 people-p text-green fw-bold">Human Resources</p>
                                         </div>
                                     </div>
                                     <div class="card mt-6 shadow filter support w-25">
                                             <div class="">
-                                                    <div class="card-overlay">
-                                                            <h1 class="card-overlay-heading">Meet Brian!</h1>
-                                                            <script src="https://fast.wistia.com/embed/medias/6flvn0qqvn.jsonp" async></script>
-                                                            <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
-                                                            <span class="wistia_embed wistia_async_6flvn0qqvn popover=true popoverContent=link" style="display:inline;position:relative">
-                                                            <a href="#"><i class="fas fa-play"></i></a></span>
-                                                    </div>
-                                                <img src="images/amanda-people.png" class="card-img" alt="">
+                                                   <!-- <div class="card-overlay">
+                                                            <h1 class="card-overlay-heading">Meet Alec!</h1>
+                                                            <button class="js-video-button btn-people--launch" data-video-id='333396749' data-channel="vimeo"><i class="fas fa-play"></i></button>
+
+                                                    </div>-->
+                                                <img src="images/alecPeople.png" class="card-img" alt="">
                                             </div>
                                             <div class="card-body">
-                                                <h6 class="card-title mb-0 text-uppercase">Mark Donatelli</h6>
-                                                <p class="card-text mb-3 people-p text-green fw-bold">Web Developer</p>
+                                                <h6 class="card-title mb-0 text-uppercase">Alec Kheboian</h6>
+                                                <p class="card-text mb-3 people-p text-green fw-bold">Sales</p>
+                                                <button class="js-video-button btn-people--launch" data-video-id='333396749' data-channel="vimeo"><i class="fas fa-play"></i></button>
+
                                             </div>
                                         </div>
                                         <div class="card mt-6 shadow filter marketing w-25">
