--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <a href="about.html" class="nav-link m-2 menu-item">About</a>
                       </li>
                       <li class="nav-item">
-                        <a href="comingsoon.html" class="nav-link m-2 menu-item">Our People</a>
+                        <a href="ourpeople.html" class="nav-link m-2 menu-item">Our People</a>
                       </li>
                       <li class="nav-item">
                           <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="nav-link m-2 menu-item">Careers</a>
