newest addition / people page

--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
                         <a href="about.html" class="nav-link m-2 menu-item nav-active">About</a>
                       </li>
                       <li class="nav-item">
-                        <a href="comingsoon.html" class="nav-link m-2 menu-item">Our People</a>
+                        <a href="ourpeople.html" class="nav-link m-2 menu-item">Our People</a>
                       </li>
                       <li class="nav-item">
                           <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="nav-link m-2 menu-item">Careers</a>
@@ -388,7 +388,7 @@
           <h5 class="text-white"><strong>Company</strong></h5>
           <ul class="list-unstyled">
             <li class="py-0 py-md-1"><a href="about.html" class="text-footer">About us</a></li>
-            <li class="py-0 py-md-1"><a href="comingsoon.html" class="text-footer">Our People</a></li>
+            <li class="py-0 py-md-1"><a href="ourpeople.html" class="text-footer">Our People</a></li>
             <li class="py-0 py-md-1"><a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="text-footer">Careers</a></li>
             <li class="py-0 py-md-1"><a href="https://www.whatemployeesreallywant.com/" target="_blank" class="text-footer">What Employees Really Want </a></li>
             <li class="py-0 py-md-1"><a href="http://fedupwithcancer.org/" target="_blank" class="text-footer">Fed Up With Cancer</a></li>
