new people updates

--- a/ourpeople.html
+++ b/ourpeople.html
@@ -193,8 +193,8 @@
                  <li class="list-inline-item gallery-list-item" data-filter="hr-filt">HR<span class="bar-hor mx-3">|</span></li>
                  <li class="list-inline-item gallery-list-item" data-filter="marketing">Marketing<span class="bar-hor mx-3">|</span></li>
                  <li class="list-inline-item gallery-list-item" data-filter="sales-filt">Sales<span class="bar-hor mx-3">|</span></li>
-                 <li class="list-inline-item gallery-list-item" data-filter="support">Support<span class="bar-hor mx-3">|</span></li>
-                 <li class="list-inline-item gallery-list-item" data-filter="operations">Operations</li>
+                 <li class="list-inline-item gallery-list-item" data-filter="support">Implementations<span class="bar-hor mx-3">|</span></li>
+                 <li class="list-inline-item gallery-list-item" data-filter="operations">Support</li>
                </ul>
                <h1 class="team text-uppercase">Team</h1>
             </div>
@@ -242,7 +242,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Adam Condon</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='339403213' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -253,7 +253,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Caleb Best</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -269,13 +269,13 @@
 
                                     </div>
                                 </div>
-                                <div class="card mt-6 shadow filter hr-filt w-25">
+                                <div class="card mt-6 shadow filter operations w-25">
                                     <div class="">
                                         <img src="images/people-images/JACKLYN C.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Jacklyn Carini</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Human Resources</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -370,7 +370,7 @@
                                 </div>
                                 <div class="card mt-6 shadow filter hr-filt w-25">
                                     <div class="">
-                                        <img src="images/people-images/Paul C.png" class="card-img" alt="">
+                                        <img src="images/people-images/paul-c.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Paul Carelis</h6>
@@ -381,11 +381,11 @@
                                 </div>
                                 <div class="card mt-6 shadow filter operations w-25">
                                     <div class="">
-                                        <img src="images/people-images/Kathy A.png" class="card-img" alt="">
+                                        <img src="images/people-images/kathy-a.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Kathy Archer</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -403,7 +403,7 @@
                                 </div>
                                 <div class="card mt-6 shadow filter sales-filt w-25">
                                     <div class="">
-                                        <img src="images/people-images/Mike B.png" class="card-img" alt="">
+                                        <img src="images/people-images/mike-b.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Michael Boardman</h6>
@@ -414,7 +414,7 @@
                                 </div>
                                 <div class="card mt-6 shadow filter sales-filt w-25">
                                     <div class="">
-                                        <img src="images/people-images/Josh K.png" class="card-img" alt="">
+                                        <img src="images/people-images/josh-k.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Josh Kiernan</h6>
@@ -424,11 +424,11 @@
                                     </div>
                                 </div>     <div class="card mt-6 shadow filter operations w-25">
                                     <div class="">
-                                        <img src="images/people-images/Nate P.png" class="card-img" alt="">
+                                        <img src="images/people-images/nate-p.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Nate Pomeroy</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='333396749' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -446,7 +446,7 @@
                                 </div>
                                 <div class="card mt-6 shadow filter hr-filt w-25">
                                     <div class="">
-                                        <img src="images/people-images/Sheri H.png" class="card-img" alt="">
+                                        <img src="images/people-images/sheri-h.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Sheri Heller</h6>
@@ -473,7 +473,7 @@
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Karina Negron</h6>
                                         <p class="card-text mb-3 people-p text-green fw-bold">Implementations</p>
-                                        <button class="js-video-button btn-people--launch" data-video-id='333396749' data-channel="vimeo"><i class="fas fa-play"></i></button>
+                                        <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
                                 </div>
@@ -494,18 +494,18 @@
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Allison McMahon</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
                                 </div>
-                                <div class="card mt-6 shadow filter hr-filt w-25">
+                                <div class="card mt-6 shadow filter lead-filt w-25">
                                     <div class="">
                                         <img src="images/people-images/MISSY M.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Missy Mcloy</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Human Resources</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Leadership</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -521,17 +521,7 @@
 
                                     </div>
                                 </div>
-                                <div class="card mt-6 shadow filter sales-filt w-25">
-                                    <div class="">
-                                        <img src="images/people-images/STACEY R.png" class="card-img" alt="">
-                                    </div>
-                                    <div class="card-body">
-                                        <h6 class="card-title mb-0 text-uppercase">Stacey Roberts</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Sales</p>
-                                        <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
-
-                                    </div>
-                                </div>
+                        
                                 <div class="card mt-6 shadow filter sales-filt w-25">
                                     <div class="">
                                         <img src="images/people-images/MAUREEN C.png" class="card-img" alt="">
@@ -604,7 +594,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Shay Srivastav</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='#' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
@@ -626,14 +616,14 @@
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Rachel Hartley</h6>
-                                        <p class="card-text mb-3 people-p text-green fw-bold">Operations</p>
+                                        <p class="card-text mb-3 people-p text-green fw-bold">Support</p>
                                         <button class="js-video-button btn-people--launch" data-video-id='334998464' data-channel="vimeo"><i class="fas fa-play"></i></button>
 
                                     </div>
                                 </div>
                                 <div class="card mt-6 shadow filter sales-filt w-25">
                                     <div class="">
-                                        <img src="images/people-images/Sue B.png" class="card-img" alt="">
+                                        <img src="images/people-images/sue-b.png" class="card-img" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h6 class="card-title mb-0 text-uppercase">Sue Boardman</h6>
@@ -662,7 +652,7 @@
                                 <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="btn btn-join btn-lg">Join Us<i class="fas fa-users"></i></a>
                             </div>
                             <div class="col-lg-8 align-self-center">
-                                <p class="mb-0 text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum tellus ipsum, viverra urna blandit non. Interdum et malesuada fames ac ante ipsum primis.</p>
+                                <p class="mb-0 text-white join-us--font-size">Looking to make a difference? Join our team!</p>
                             </div>
                         </div>
                     </div>
