--- a/why.html
+++ b/why.html
@@ -135,7 +135,7 @@
                         <a href="about.html" class="nav-link m-2 menu-item">About</a>
                       </li>
                       <li class="nav-item">
-                        <a href="ourpeople.html" class="nav-link m-2 menu-item">Our People</a>
+                        <a href="ourpeople.html" class="nav-link m-2 menu-item">`</a>
                       </li>
                       <li class="nav-item">
                           <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="nav-link m-2 menu-item">Careers</a>
