updated careers page, added assets

--- a/ourpeople.html
+++ b/ourpeople.html
@@ -138,7 +138,7 @@
                             <a href="#" class="nav-link m-2 nav-active">Our People</a>
                           </li>
                           <li class="nav-item">
-                              <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="nav-link m-2 ">Careers</a>
+                              <a href="careers.html" class="nav-link m-2 ">Careers</a>
                             </li>
                           <li class="nav-item"><div class="dropdown"> <a class="nav-link drop-head m-2 dropdown-toggle" 
                             href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" 
@@ -649,7 +649,7 @@
                 <div class="container height-dz">
                         <div class="row justify-content-center">
                             <div class="col-lg-4 text-center align-self-center join-us-icon">
-                                <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="btn btn-join btn-lg">Join Us<i class="fas fa-users"></i></a>
+                                <a href="careers.html" class="btn btn-join btn-lg">Join Us<i class="fas fa-users"></i></a>
                             </div>
                             <div class="col-lg-8 align-self-center">
                                 <p class="mb-0 text-white join-us--font-size">Looking to make a difference? Join our team!</p>
@@ -682,7 +682,7 @@
           <ul class="list-unstyled">
             <li class="py-0 py-md-1"><a href="about.html" class="text-footer">About us</a></li>
             <li class="py-0 py-md-1"><a href="#" class="text-footer">Our People</a></li>
-            <li class="py-0 py-md-1"><a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="text-footer">Careers</a></li>
+            <li class="py-0 py-md-1"><a href="careers.html" class="text-footer">Careers</a></li>
             <li class="py-0 py-md-1"><a href="https://www.whatemployeesreallywant.com/" target="_blank" class="text-footer">What Employees Really Want </a></li>
             <li class="py-0 py-md-1"><a href="http://fedupwithcancer.org/" target="_blank" class="text-footer">Fed Up With Cancer</a></li>
           </ul>
