--- a/payroll.html
+++ b/payroll.html
@@ -135,7 +135,7 @@
                             <a href="ourpeople.html" class="nav-link m-2 menu-item">Our People</a>
                           </li>
                           <li class="nav-item">
-                              <a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="nav-link m-2 menu-item">Careers</a>
+                              <a href="careers.html" class="nav-link m-2 menu-item">Careers</a>
                             </li>
                           <li class="nav-item"><div class="dropdown"> <a class="nav-link drop-head m-2 dropdown-toggle" 
                             href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" 
@@ -338,7 +338,7 @@
           <ul class="list-unstyled">
             <li class="py-0 py-md-1"><a href="about.html" class="text-footer">About us</a></li>
             <li class="py-0 py-md-1"><a href="ourpeople.html" class="text-footer">Our People</a></li>
-            <li class="py-0 py-md-1"><a href="https://masspay.isolvedhire.com/jobs/" target="_blank" class="text-footer">Careers</a></li>
+            <li class="py-0 py-md-1"><a href="careers.html" class="text-footer">Careers</a></li>
             <li class="py-0 py-md-1"><a href="https://www.whatemployeesreallywant.com/" target="_blank" class="text-footer">What Employees Really Want </a></li>
             <li class="py-0 py-md-1"><a href="http://fedupwithcancer.org/" target="_blank" class="text-footer">Fed Up With Cancer</a></li>
           </ul>
